--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "clnooms"
-description = "High-level implementation of cool number formats"
-version = "0.1.0"
+description = "Assembly-level implementation of interesting data types"
+version = "0.5.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
