--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "clnooms"
 description = "Assembly-level implementation of interesting data types"
+authors = [ "Alex Andreba" ]
 version = "0.5.0"
 edition = "2021"
+readme = "README.md"
+repository = "https://github.com/Aandreba/clnooms"
+license = "MIT OR Apache-2.0"
+keywords = ["asm", "assembly", "half", "float"]
+categories = ["data-structures", "hardware-support", "mathematics"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
