--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,12 @@ categories = ["data-structures", "hardware-support", "mathematics"]
 
 [dependencies]
 cfg-if = "1.0.0"
+
+[dev-dependencies]
+criterion = "0.3"
+rand = "0.8.4"
+rayon = "1.5.1"
+
+[[bench]]
+name = "f80"
+harness = false
